<resources>
    <string name="app_name">MyDebts</string>
    <string name="settings">Настройки</string>
    <string name="audit">Аудит</string>
    <string name="popup_menu">Контекстное меню</string>
    <string name="placeholder_date">10.05.2016</string>
    <string name="cannot_load_circles">Не удалось загрузить контакты из кругов :(</string>
    <string name="filter">Фильтр</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="avatar">Аватарка</string>
    <string name="debt_amount">Сумма долга</string>
    <string name="get_dialog_text">Сколько взял?</string>
    <string name="unknown_person">Неизвестно (нет в кругах)</string>
    <string name="server_sync_failed">Невозможно синхронизировать объект</string>
    <string name="refresh">Обновить</string>
    <string name="not_approved">Не подтверждено</string>
    <string name="approved">Подтверждено</string>
    <string name="you">Вы</string>
    <string name="give_debt">Дать в долг</string>
    <string name="get_debt">Взять в долг</string>
    <string name="delete">Удалить</string>
    <string name="approve_dialog_title">Подтверждение</string>
    <string name="approve_dialog_message">Подтверждаете долг?</string>
    <string name="give_dialog_text">Сколько дал?</string>
    <string name="debts_menu">Меню долгов</string>
    <string name="server_address">Адрес сервера</string>
    <string name="server_address_summary">Вариант по умолчанию: sorseg.ru:1337</string>
    <string name="server_address_hint"><![CDATA[<host.name>:<port>]]></string>
    <string name="invalid_server_url">Некорректный URL сервера! Сброшено по умолчанию.</string>
    <string name="reload_contact_list">Обновить список контактов</string>
    <string name="arrow_right">➡</string>
</resources>
