<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <io.codetail.widget.RevealFrameLayout
        android:id="@+id/circular_reveal_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/debt_create_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="48dp"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <SearchView
                    android:id="@+id/debt_create_search_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:iconifiedByDefault="false"
                    android:queryHint="@string/filter"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/debt_create_contact_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </io.codetail.widget.RevealFrameLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/floating_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_white_48dp"
        android:visibility="invisible"
        custom:menu_fab_label="@string/debts_menu">

        <com.github.clans.fab.FloatingActionButton
            style="@style/MenuButtonsStyle"
            android:id="@+id/floating_give_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_attach_money_white_24dp"
            custom:fab_label="@string/give_debt"/>

        <com.github.clans.fab.FloatingActionButton
            style="@style/MenuButtonsStyle"
            android:id="@+id/floating_get_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_money_off_white_24dp"
            custom:fab_label="@string/get_debt"/>

    </com.github.clans.fab.FloatingActionMenu>

    <include layout="@layout/view_custom_progressbar" />

</android.support.design.widget.CoordinatorLayout>
